--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <div class="home-content">
             <div class="card-section is-active" id="about">
                 <div class="card-content">
-                    <div class="card-subtitle">ABOUT</div>
-                    <div class="card-item-desc"></div>Hallo my name is Surya, my age is 16, my city is Jepara, my religion is Islam and my hobby is swimming</div>
+           <div class="card-subtitle">ABOUT ME</div>
+          <div class="card-item-desc"></div>Hallo my name is Surya, my age is 16, my city is Jepara, my religion is Islam and my hobby is swimming</div>
                 </div>
                 <div class="card-social">
-                    <a href="https://www.github.com/Jabalsurya2105/">
+                    <a href="https://instagram.com/surya_skylark05">
 						<i class="fa fa-instagram"></i>
                     </a>
                     <a href="https://www.github.com/Jabalsurya2105/">
@@ -78,7 +78,7 @@
                             <div class="card-item-desc"></div>
                         </div>
                         <div class="card-item" data-year="2021">
-                            <div class="card-item-title">Membuat Script Dengan Program Nodejs
+                            <div class="card-item-title">Membuat Script Dengan Bahasa Pemrograman Nodejs
                             </div>
                             <div class="card-item-desc"></div>
                                 </div>
@@ -142,11 +142,11 @@
 <script>
 //Audio Link MP3
 function play() {var audio = new 
-Audio('https://b.top4top.io/m_22249hz100.mp3');audio.play();audio.loop=true;audio.addEventListener('ended', function() {this.currentTime = 0;this.play();}, false);} const swals = Swal.mixin({cancelButtonColor: '#909090', confirmButtonColor: '#8B00B4', allowOutsideClick: false,});
+Audio('https://e.top4top.io/m_22246yjt01.mp3');audio.play();audio.loop=true;audio.addEventListener('ended', function() {this.currentTime = 0;this.play();}, false);} const swals = Swal.mixin({cancelButtonColor: '#909090', confirmButtonColor: '#8B00B4', allowOutsideClick: false,});
 </script>
 
 <script>
-  async function start() {await swals.fire('Halo bre');setTimeout(mulai, 1000);play();} start();
+  async function start() {await swals.fire('Halo bre jangan lupa bahagia');setTimeout(mulai, 1000);play();} start();
   function showDiv() {document.getElementById("fotgoy").style.animation = "fotogoy 2s ease infinite";document.getElementById('Content').style.opacity = "1";}  function iloveu() {document.getElementById('sp1').style.display = "none";document.getElementById('sp2').style.display = "block";document.getElementById('text2').style.display = "none";}  function mulai() {ketiknm();showDiv();}  function ketiknm() {document.getElementById('pergeseran').style.opacity = "1";document.getElementById('pergeseran').style.visibility = "visible";document.getElementById('pergeseran').style.margin = "50px 0 0 0";}
 </script>
 </body>
