--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="home-content">
             <div class="card-section is-active" id="about">
                 <div class="card-content">
-           <div class="card-subtitle">ABOUT ME</div>
+           <div class="card-subtitle">TENTANG SAYA</div>
           <div class="card-item-desc"></div>Hallo my name is Surya, my age is 16, my city is Jepara, my religion is Islam and my hobby is swimming</div>
                 </div>
                 <div class="card-social">
